--- a/styles/globals.css
+++ b/styles/globals.css
@@ -106,3 +106,13 @@ a {
     color-scheme: dark;
   }
 }
+
+#lightbox {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    /*optional bg color*/
+    background-color: rgba(255, 255, 255, 0.5);
+    /*the following isn't necessary but will help center everything once we add buttons*/
+}
