--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,3 +116,20 @@ a {
     background-color: rgba(255, 255, 255, 0.5);
     /*the following isn't necessary but will help center everything once we add buttons*/
 }
+
+.navigation-loader {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ffffff;
+    color: #000000;
+    font-size: 18px;
+    font-weight: 700;
+    z-index: 100;
+    transition: all 0.2s ease-in-out;
+}
